# blog-pipeline

./: .env.example  README.md  pyproject.toml
.github/workflows/: generate.yml
src/: humanizer.py
src/blog_pipeline/: __init__.py  ai_detector.py  humanizer.py  pipeline.py  seo.py
src/blog_pipeline/backends/: base.py  filesystem.py
tests/: test_pipeline.py
